# ros2-workspace-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  prompts.md  resources.md  security.md  tools.md
examples/client-configs/: claude-desktop.json.example  codex.toml.example
examples/demo_ws/src/demo_interfaces/: CMakeLists.txt  package.xml
examples/demo_ws/src/demo_python/: package.xml  setup.py
examples/demo_ws/src/demo_python/config/: demo.yaml
examples/demo_ws/src/demo_python/launch/: demo.launch.py
examples/demo_ws/src/demo_robot/: CMakeLists.txt  package.xml
examples/demo_ws/src/demo_robot/urdf/: demo.urdf
src/ros2_workspace_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/ros2_workspace_mcp/analyzers/: __init__.py  dependencies.py  diagnosis.py  interfaces.py  launch.py  package.py  package_selector.py  robot.py  workspace.py
src/ros2_workspace_mcp/models/: __init__.py  common.py  dependency.py  diagnosis.py  interface.py  launch.py  package.py  robot.py  workspace.py
src/ros2_workspace_mcp/parsers/: __init__.py  build_files.py  dependencies.py  interfaces.py  launch.py  package_details.py  package_xml.py  robot.py
src/ros2_workspace_mcp/prompts/: __init__.py  review.py
src/ros2_workspace_mcp/resources/: __init__.py  package.py  workspace.py
src/ros2_workspace_mcp/security/: __init__.py  files.py  paths.py
src/ros2_workspace_mcp/tools/: __init__.py  dependencies.py  diagnosis.py  interfaces.py  launch.py  package.py  robot.py  workspace.py
tests/: conftest.py  test_analyze_dependencies_tool.py  test_analyze_launch_tool.py  test_cli.py  test_config.py  test_dependency_analyzer.py  test_dependency_parser.py  test_diagnose_workspace_tool.py  test_diagnosis_analyzer.py  test_inspect_interfaces_tool.py  test_inspect_package_tool.py  test_inspect_robot_tool.py  test_interface_analyzer.py  test_interface_parser.py  test_launch_analyzer.py  test_launch_parsers.py  test_package_analyzer.py  test_package_build_parsers.py  test_package_details_parser.py  test_package_resource.py  test_package_xml_parser.py  test_protocol_capabilities.py  test_release_readiness.py  test_review_prompt.py  test_robot_analyzer.py  test_robot_parser.py  test_scan_workspace_tool.py  test_security_paths.py  test_server.py  test_stdio_all_tools.py  test_stdio_resources_prompts.py  test_workspace_analyzer.py  test_workspace_resources.py
