[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ros2-workspace-mcp"
version = "0.1.0"
description = "A local-first, read-only MCP server for inspecting ROS 2 workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ROS 2 Workspace Inspector contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "mcp>=1.27,<2",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.3,<7",
]

[project.urls]
Homepage = "https://github.com/doer0312/ros2-workspace-mcp"
Repository = "https://github.com/doer0312/ros2-workspace-mcp"
Issues = "https://github.com/doer0312/ros2-workspace-mcp/issues"
Documentation = "https://github.com/doer0312/ros2-workspace-mcp/tree/main/docs"

[project.scripts]
ros2-workspace-mcp = "ros2_workspace_mcp.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ros2_workspace_mcp"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
