<package format="3">
  <name>demo_interfaces</name>
  <version>0.1.0</version>
  <description>Original minimal interfaces for the static-analysis demo.</description>
  <maintainer email="maintainer@example.com">Demo Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
